--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,7 @@ INFLUX_PORT=8086
 INFLUX_TOKEN_WRITE=my-token
 INFLUX_ORG=my-org
 INFLUX_BUCKET=my-bucket
+INFLUX_MEASUREMENT=my-measurement
 
 # Folder with CSV test data
 IMPORT_FOLDER=./spec/data
